new changes including design change to FAU

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RSVI Sensation task 3</string>
+    <string name="model_name">Model Name</string>
 </resources>
